--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,17 @@ body {
   overflow: none;
 }
 
+.header {
+  height: 100px;
+  padding: 20px;
+}
+
+.arrow {
+  font-size: 3rem;
+}
+
 .wrapper {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -169,4 +178,17 @@ body {
   bottom: 0;
   background: var(--grid);
   z-index: -1;
+}
+
+/* Mobile Styles */
+@media screen and (max-width: 600px) {
+  .boardTitle {
+    font-size: 2rem;
+  }
+
+  .cell {
+    height: 35px;
+    width: 35px;
+    font-size: 1.5rem;
+  }
 }
