--- a/src/App.css
+++ b/src/App.css
@@ -165,15 +165,28 @@ body {
   box-shadow: 2px 2px 10px 4px var(--editable-cell-background);
 }
 
+.check_result_btn,
+.hint_btn,
+.solve_btn {
+  font-weight: bold;
+}
+
 .check_result_btn:hover {
   background-color: var(--primary);
   color: var(--background);
+  box-shadow: 2px 2px 10px 4px var(--primary);
 }
 
 .hint_btn:hover {
   background-color: var(--yellow-highlight);
   color: var(--background);
   box-shadow: 2px 2px 10px 4px var(--yellow-highlight);
+}
+
+.solve_btn:hover {
+  background-color: var(--success-highlight);
+  color: var(--background);
+  box-shadow: 2px 2px 10px 4px var(--success-highlight);
 }
 
 .close_btn {
