--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,10 @@ body {
 }
 
 .menu_item {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 300px;
   padding: 10px;
   transition: 0.3s ease-in-out;
   text-align: center;
@@ -356,6 +360,43 @@ body {
   transform: translateY(-2px);
 }
 
+/* How To Play Design */
+
+.how_to_play_container {
+  width: 80%;
+  padding: 10px 20px;
+  font-size: 1.4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.rules_container {
+  list-style: decimal;
+}
+
+.rules_container li {
+  margin: 20px;
+}
+
+.tips_container {
+  width: 50%;
+  border: 1px solid var(--yellow-highlight);
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--yellow-highlight);
+  align-self: center;
+}
+
+.tips_container li {
+  margin: 20px;
+}
+
 /* Mobile Styles */
 @media screen and (max-width: 600px) {
   .boardTitle {
@@ -366,5 +407,13 @@ body {
     height: 35px;
     width: 35px;
     font-size: 1.5rem;
+  }
+
+  .how_to_play_container {
+    width: 100%;
+  }
+
+  .tips_container {
+    width: 100%;
   }
 }
