--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ body {
 }
 
 .title {
-  font-size: 6rem;
+  font-size: 5rem;
   margin-bottom: 12px;
   text-align: center;
 }
@@ -420,6 +420,10 @@ body {
     height: 35px;
     width: 35px;
     font-size: 1.5rem;
+  }
+
+  .scores_container {
+    width: 80%;
   }
 
   .how_to_play_container {
