fixed keyboard type to be numeric

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,16 @@
   background: var(--grid);
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 /* layout design */
 
 body {
